# resume-ranker

./: .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  project_documentation.md  pyproject.toml  submission_metadata_template.yaml
artifacts/: candidate_ids.npy  manifest.json
configs/: default.toml  fast.toml  quality.toml
data/output/: submission.audit.json  submission.csv
scripts/: download_model.py  precompute.py  rank.py  smoke_run.ps1  validate.py
src/: config.py  pipeline.py  schema.py
src/embedding/: embedder.py  index.py
src/features/: honeypot_detector.py  signal_processor.py  text_builder.py
src/parsers/: candidate_parser.py  docx_parser.py
src/ranking/: aggregator.py  reasoner.py  scorer.py
src/resume_ranker/: config.py  exceptions.py
src/resume_ranker/app/: output_writer.py  pipeline.py  run_context.py
src/resume_ranker/cli/: benchmark.py  precompute.py  rank.py  validate.py
src/resume_ranker/domain/: explanations.py  honeypot_rules.py  schema.py  scoring.py
src/resume_ranker/evaluation/: audit.py  benchmark.py  metrics.py
src/resume_ranker/features/: signal_features.py  text_builder.py
src/resume_ranker/infrastructure/: artifact_store.py  candidate_reader.py  embedder.py  vector_index.py
tests/: conftest.py  test_honeypot.py  test_parsers.py  test_scorer.py
tests/integration/: test_pipeline_small_fixture.py
tests/regression/: test_artifact_manifest.py
tests/unit/: test_cli.py  test_honeypot.py  test_readers.py  test_scorer.py
