[project]
name = "resume-ranker"
version = "0.1.0"
description = "Production-grade resume ranking system for Redrob Hackathon"
requires-python = ">=3.11"
authors = [{ name = "Redrob Team" }]
readme = "README.md"

dependencies = [
    "numpy",
    "pandas",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-docx",
    "sentence-transformers",
    "faiss-cpu",
    "scikit-learn",
    "nltk",
    "jsonschema",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.scripts]
rank = "scripts.rank:main"
precompute = "scripts.precompute:main"
validate = "scripts.validate:main"

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

