[project]
name = "resume-ranker"
version = "0.1.0"
description = "Production-grade resume ranking system for Redrob Hackathon"
requires-python = ">=3.12"
authors = [{ name = "Aditya Kanamadi" }] 
readme = "README.md"

dependencies = [
    # Core
    "numpy",
    "polars",
    "pydantic>=2.0", 
    "pydantic-settings",
    "python-docx",
    "orjson",
    "pyarrow",
    "joblib",
    "rapidfuzz",
    "jsonschema",

    # ML
    "torch==2.7.1", 
    "torchvision==0.22.1",
    "transformers==4.52.4",
    "sentence-transformers==5.0.0",
    "faiss-cpu",
    "huggingface-hub",

    # Utilities
    "tqdm",
    "rich",
    "typer",

    # UI
    "streamlit", 
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
rank = "resume_ranker.cli.rank:main"
precompute = "resume_ranker.cli.precompute:main"
validate = "resume_ranker.cli.validate:main"
benchmark = "resume_ranker.cli.benchmark:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "polars.*",
    "numpy.*",
    "faiss.*",
    "docx.*",
    "joblib.*",
    "rapidfuzz.*",
    "jsonschema.*",
    "jsonschema.exceptions.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/resume_ranker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
